cmake_minimum_required( VERSION 3.13 )

# #
# # This must go before project()
# #
# set(CMAKE_C_COMPILER "gcc")
# set(CMAKE_C_FLAGS_DEBUG "-g")
# set(CMAKE_CC_FLAGS "-fno-inline")
#
# set(CMAKE_CXX_COMPILER "g++")
# set(CMAKE_CXX_FLAGS_DEBUG "-g")
# set(CMAKE_CXX_FLAGS "-fno-inline")
#

project( Algorithms_4th_Edition )

set( CMAKE_CXX_STANDARD 17 )

# find_library( LIBSTDCXX NAMES stdc++ )

# add_compile_options( -stdlib=libstdc++ )

# add_executable(03_04_19_SeparateChainingHashSTKeys 03_04_19_SeparateChainingHashSTKeys.cpp)
# add_executable(03_04_19_LinearProbingHashSTKeys 03_04_19_LinearProbingHashSTKeys.cpp )
# add_executable(03_04_20_LinearProbingHashSTSearchHitCost 03_04_20_LinearProbingHashSTSearchHitCost.cpp)
# add_executable(03_04_21_LinearProbingHashSTSearchMissCost 03_04_21_LinearProbingHashSTSearchMissCost.cpp)
# add_executable(03_04_22_HashCodeForDifferentTypes 03_04_22_HashCodeForDifferentTypes.cpp)
# add_executable(03_04_25_TransactionHashCache 03_04_25_TransactionHashCache.cpp)
# add_executable(03_04_26_LinearProbingHashSTLazyDelete 03_04_26_LinearProbingHashSTLazyDelete.cpp)
# add_executable(03_04_27_SeparateChainingHashSTDoubleProbing 03_04_27_SeparateChainingHashSTDoubleProbing.cpp)
# add_executable(03_04_28_LinearProbingHashSTDoubleHashing 03_04_28_LinearProbingHashSTDoubleHashing.cpp)
# add_executable(03_04_30_ChiSquareStatistic 03_04_30_SeparateChainingHashSTChiSquare.cpp )
# add_executable(03_04_31_CuckooHashing 03_04_31_CuckooHashing.cpp)
# add_executable(03_04_36_SeparateChainingHashSTListLengthRange 03_04_36_SeparateChainingHashSTListLengthRange.cpp)
# add_executable(03_04_37_SeparateChainingHybrid 03_04_37_SeparateChainingHybrid.cpp)
# add_executable(03_04_38_SeparateChainingHashSTDistribution 03_04_38_SeparateChainingHashSTDistribution.cpp)
# add_executable(03_04_39_LinearProbingHashSTDistribution 03_04_39_LinearProbingHashSTDistribution.cpp)
# add_executable(03_05_01_SetAndHashSet 03_05_01_SetAndHashSet.cpp)
# add_executable(03_05_02_SequentialSearchSet 03_05_02_SequentialSearchSet.cpp)
# add_executable(03_05_03_BinarySearchSet 03_05_03_BinarySearchSTSet.cpp )
# add_executable(03_05_04_LinearProbingHashSTDoubleInt 03_05_04_LinearProbingHashSTDoubleInt.cpp)
# add_executable(03_05_05_RedBlackBSTDoubleInt 03_05_05_RedBlackBSTDoubleInt.cpp)
# add_executable(03_05_06_HashSetDoubleInt 03_05_06_HashSetDoubleInt.cppstatic int maxDegree( const Graph& G ) {
# add_executable(03_05_07_SetDoubleInt 03_05_07_SetDoubleInt.cpp)
# add_executable(03_05_08_LinearProbingHashSTDuplicateKeys 03_05_08_LinearProbingHashSTDuplicateKeys.cpp)
# add_executable(03_05_09_BSTDuplicateKeys 03_05_09_BSTDuplicateKeys.cpp)
# add_executable(03_05_10_RedBlackBST 03_05_10_RedBlackBST.cpp)
# add_executable(03_05_11_MultiSet 03_05_11_MultiSet.cpp)
# add_executable(03_05_14_StaticInvertST 03_05_14_StaticInvertST.cpp)
# add_executable(03_05_15_KGramsOfString 03_05_15_KGramsOfString.cpp)
# add_executable(03_05_16_SparseVectorSum 03_05_16_SparseVectorSum.cpp)
# add_executable(03_05_17_MathSet 03_05_17_MathSet.cpp)
# add_executable(03_05_18_MultiSets 03_05_18_MultiSets.cpp)
# add_executable(03_05_19_EqualKeysInSymbolTables 03_05_19_EqualKeysInSymbolTables.cpp)
# add_executable(03_05_20_Concordance 03_05_20_Concordance.cpp)
# add_executable(03_05_21_InvertedConcordance 03_05_21_InvertedConcordance.cpp)
# add_executable(03_05_22_FullLookupCSV 03_05_22_FullyIndexedLookupCSV.cpp )
# add_executable(03_05_23_SparseMatrices 03_05_23_SparseMatrices.cpp)
# add_executable(03_05_24_NonOverlappingIntervalSearch 03_05_24_NonOverlappingIntervalSearch.cpp)
# add_executable(03_05_25_RegistrarScheduling 03_05_25_RegistrarScheduling.cpp)
# add_executable(03_05_26_LRUCache 03_05_26_LRUCache.cpp)
# add_executable(03_05_27_List 03_05_27_List.cpp)
# add_executable(03_05_28_UniQueue 03_05_28_UniQueue.cpp)
# add_executable(03_05_29_SymbolTableWithRandomAccess 03_05_29_SymbolTableWithRandomAccess.cpp)
# add_executable(04_01_03_GraphCopyConstructor 04_01_03_GraphCopyConstructor.cpp)
# add_executable(04_01_04_GraphHasEdge 04_01_04_GraphHasEdge.cpp)
# add_executable(04_01_05_GraphDisallowParallelEdgeSelfLoops 04_01_05_GraphDisallowParallelEdgeSelfLoops.cpp)
# add_executable(04_01_08_SearchAPIUsingUF 04_01_08_SearchAPIUsingUF.cpp)
# add_executable(04_01_10_DFSVertexRemovalNotDisonnect 04_01_10_DFSVertexRemovalNotDisonnect.cpp)
# add_executable(04_01_13_BreadthFirstPathsDistTo 04_01_13_BreadthFirstPathsDistTo.cpp)
# add_executable(04_01_16_EccentricityOfVertex 04_01_16_EccentricityOfVertex.cpp )
# add_executable(04_01_18_GirthOfGraph 04_01_18_GirthOfGraph.cpp)
# add_executable(04_01_22_SymbolGraphKevinBacon 04_01_22_SymbolGraphKevinBacon.cpp)
# add_executable(04_01_23_BaconHistogram 04_01_23_BaconHistogram.cpp)
# add_executable(04_01_24_ComputeCCKevinBacon 04_01_24_ComputeCCKevinBacon.cpp)
# add_executable(04_01_26_SymbolGraphDepthFirst 04_01_26_SymbolGraphDepthFirst.cpp)
# add_executable(04_01_29_CycleSelfLoopsParallelEdges 04_01_29_CycleSelfLoopsParallelEdges.cpp)
# add_executable(04_01_30_EulerHamiltonCycles 04_01_30_EulerHamiltonCycles.cpp)
# add_executable(04_01_32_ParallelEdgeDetection 04_01_32_ParallelEdgeDetection.cpp)
# add_executable(04_01_34_SymbolGraphOnePass 04_01_34_SymbolGraphOnePass.cpp)
# add_executable(04_01_36_EdgeConnectivity 04_01_36_EdgeConnectivity.cpp)
# add_executable(04_01_37_EuclideanGraphs 04_01_37_EuclideanGraphs.cpp)
# add_executable(04_01_38_ImageProcessingFloodFill 04_01_38_ImageProcessingFloodFill.cpp)
# add_executable(04_02_03_DigraphCopyConstructor 04_02_03_DigraphCopyConstructor.cpp)
# add_executable(04_02_04_DigraphHasEdge 04_02_04_DigraphHasEdge.cpp)
# add_executable(04_02_05_DigraphDisallowParallelEdgeSelfLoops 04_02_05_DigraphDisallowParallelEdgeSelfLoops.cpp)
# add_executable(04_02_07_DigraphInDegreeOutDegree 04_02_07_DigraphInDegreeOutDegree.cpp)
# add_executable(04_02_09_CheckIfDAGPermutationIsTopoOrdered 04_02_09_CheckIfDAGPermutationIsTopoOrdered.cpp)
# add_executable(04_02_13_TransitiveDisclosure 04_02_13_TransitiveDisclosure.cpp)
# add_executable(04_02_20_DirectedEulerianCycle 04_02_20_DirectedEulerianCycle.cpp)
# add_executable(04_02_21_LCAofDAG 04_02_21_LCAofDAG.cpp )
# add_executable(04_02_22_ShortestAncestralPath 04_02_22_ShortestAncestralPath.cpp)
# add_executable(04_02_23_StrongComponent 04_02_23_StrongComponent.cpp)
# add_executable(04_02_24_HamiltonianPathInDAGs 04_02_24_HamiltonianPathInDAGs.cpp)
# add_executable(04_02_25_UniqueTopologicalOrdering 04_02_25_UniqueTopologicalOrdering.cpp)
# add_executable(04_02_26_TwoSatisfiability 04_02_26_TwoSatisfiability.cpp)
# add_executable(04_02_29_ArithmeticExpressions 04_02_29_ArithmeticExpressions.cpp)
# add_executable(04_02_30_QueueBasedTopologicalSort 04_02_30_QueueBasedTopologicalSort.cpp)
# add_executable(04_02_31_EuclideanDigraphs 04_02_31_EuclideanDigraphs.cpp)
# add_executable(04_03_10_EdgeWeightedGraphAdjMatrix 04_03_10_EdgeWeightedGraphAdjMatrix.cpp)
# add_executable(04_03_16_RangeOfWeights 04_03_16_RangeOfWeights.cpp)
# add_executable(04_03_22_MinimumSpanningForest 04_03_22_MinimumSpanningForest.cpp)
# add_executable(04_03_23_VyssotskyMST 04_03_23_VyssotskyMST.cpp )
# add_executable(04_03_24_ReverseDeleteMST 04_03_24_ReverseDeleteMST.cpp )
# add_executable(04_03_25_WorstCaseGenerator 04_03_25_WorstCaseGenerator.cpp )
# add_executable(04_03_26_CriticalEdges 04_03_26_CriticalEdges.cpp)
# add_executable(04_03_29_DenseGraphs 04_03_29_DenseGraphs.cpp)
# add_executable(04_03_30_EuclideanWeightedGraphs 04_03_30_EuclideanWeightedGraphs.cpp)
# add_executable(04_03_31_EagerWeights 04_03_31_EagerWeights.cpp)
# add_executable(04_03_33_Certification 04_03_33_Certification.cpp)
# add_executable(04_03_42_IncrementalQuickSelectPartitioning 04_03_42_IncrementalQuickSelectPartitioning.cpp )
# add_executable(04_03_43_BoruvkaMST 04_03_43_BoruvkaMST.cpp )
# add_executable(04_03_44_BoruvkaImprovedMST 04_03_44_BoruvkaImprovedMST.cpp )
# add_executable(04_03_46_JohnsonAlgorithm 04_03_46_JohnsonAlgorithm.cpp)
# add_executable(04_04_02_EdgeWeightedDigraphToString 04_04_02_EdgeWeightedDigraphToString.cpp)
# add_executable(04_04_03_EdgeWeightedDigraphAdjMatrix 04_04_03_EdgeWeightedDigraphAdjMatrix.cpp)
# add_executable(04_04_07_SecondDijkstraSP 04_04_07_SecondDijkstraSP.cpp)
# add_executable(04_04_08_DiameterOfDigraph 04_04_08_DiameterOfDigraph.cpp)
# add_executable(04_04_12_EdgeWeightedCycleFinderTopological 04_04_12_EdgeWeightedCycleFinderTopological.cpp)
# add_executable(04_04_18_CPMPrintsAllCriticalPaths 04_04_18_CPMPrintsAllCriticalPaths.cpp)
# add_executable(04_04_19_LowestWeightBestArbitrage 04_04_19_LowestWeightBestArbitrage.cpp)
# add_executable(04_04_22_VertexWeights 04_04_22_VertexWeights.cpp)
# add_executable(04_04_23_SourceSinkShortestPaths 04_04_23_SourceSinkShortestPaths.cpp)
# add_executable(04_04_24_MultisourceShortestPaths 04_04_24_MultisourceShortestPaths.cpp)
# add_executable(04_04_25_ShortestPathBetweenTwoSubsets 04_04_25_ShortestPathBetweenTwoSubsets.cpp)
# add_executable(04_04_26_SingleSourceShortestPathsDenseGraphs 04_04_26_SingleSourceShortestPathsDenseGraphs.cpp)
# add_executable(04_04_27_ShortestPathsEuclideanGraphs 04_04_27_ShortestPathsEuclideanGraphs.cpp)
# add_executable(04_04_28_LongestPathsInDAGs 04_04_28_LongestPathsInDAGs.cpp)
# add_executable(04_04_30_AllPairsShortestPathNegativeCycles 04_04_30_AllPairsShortestPathNegativeCycles.cpp)
# add_executable(04_04_31_AllPairsShortestPathOnALine 04_04_31_AllPairsShortestPathOnALine.cpp)
# add_executable(04_04_32_ParentCheckingHeuristic 04_04_32_ParentCheckingHeuristic.cpp)
# add_executable(04_04_33_ShortestPathInAGrid 04_04_33_ShortestPathInAGrid.cpp)
# add_executable(04_04_34_MonotonicShortestPath 04_04_34_MonotonicShortestPath.cpp)
# add_executable(04_04_35_BitonicShortestPath 04_04_35_BitonicShortestPath.cpp)
# add_executable(04_04_36_Neighbors 04_04_36_Neighbors.cpp)
# add_executable(04_04_37_CriticalEdges 04_04_37_CriticalEdges.cpp)
# add_executable(04_04_38_Sensitivity 04_04_38_Sensitivity.cpp)
# add_executable(04_04_39_LazyDijkstraSP 04_04_39_LazyDijkstraSP.cpp)
# add_executable(04_04_40_BottleneckSPT 04_04_40_BottleneckSPT.cpp)
# add_executable(04_04_41_BidirectionalSearch 04_04_41_BidirectionalSearch.cpp)
# add_executable(04_04_45_FastBellmanFordSP 04_04_45_FastBellmanFordSP.cpp)
# add_executable(05_01_01_CountingSortWithSymbolTable 05_01_01_CountingSortWithSymbolTable.cpp)
# add_executable(05_01_07_KeyIndexedCountingArrayOfQueueObjs 05_01_07_KeyIndexedCountingArrayOfQueueObjs.cpp)
# add_executable(05_01_09_LSDStringSortVariableLength 05_01_09_LSDStringSortVariableLength.cpp)
# add_executable(05_01_11_QueueSort 05_01_11_QueueSort.cpp)
# add_executable(05_01_12_AlphabetLSDMSDStringSort 05_01_12_AlphabetLSDMSDStringSort.cpp)
# add_executable(05_01_14_Quick3WayIntArraysSort 05_01_14_Quick3WayIntArraysSort.cpp)
# add_executable(05_01_15_SublinearSort 05_01_15_SublinearSort.cpp)
# add_executable(05_01_16_LinkedListSort 05_01_16_LinkedListSort.cpp)
# add_executable(05_01_17_InPlaceKeyIndexedCounting 05_01_17_InPlaceKeyIndexedCounting.cpp)
# add_executable(05_02_05_NonRecursiveTrieSTAndTST 05_02_05_NonRecursiveTrieSTAndTST.cpp)
# add_executable(05_02_06_StringSET 05_02_06_StringSET.cpp)
# add_executable(05_02_08_OrderedOperationsForTries 05_02_08_OrderedOperationsForTries.cpp)
# add_executable(05_02_09_TSTExtendedOperations 05_02_09_TSTExtendedOperations.cpp)
# add_executable(05_02_10_TrieSTAndTSTEagerSize 05_02_10_TrieSTAndTSTEagerSize.cpp)
# add_executable(05_02_11_ExternalOneWayBranching 05_02_11_ExternalOneWayBranching.cpp)
# add_executable(05_02_14_UniqueSubstringsOfLengthL 05_02_14_UniqueSubstringsOfLengthL.cpp)
# add_executable(05_02_15_UniqueSubstrings 05_02_15_UniqueSubstrings.cpp)
# add_executable(05_02_17_SpellChecking 05_02_17_SpellChecking.cpp)
# add_executable(05_02_18_Whitelist 05_02_18_Whitelist.cpp)
# add_executable(05_02_19_RandomPhoneNumbers 05_02_19_RandomPhoneNumbers.cpp)
# add_executable(05_02_20_ContainsPrefix 05_02_20_ContainsPrefix.cpp)
# add_executable(05_02_21_SubstringMatches 05_02_21_SubstringMatches.cpp)
# add_executable(05_03_01_BruteForceSubStrSearch 05_03_01_BruteForceSubStrSearch.cpp)
# add_executable(05_03_04_FirstOccurrenceMBlanks 05_03_04_FirstOccurrenceMBlanks.cpp)
# add_executable(05_03_05_BruteForceRL 05_03_05_BruteForceRL.cpp)
# add_executable(05_03_07_BruteForceCountSearchAll 05_03_07_BruteForceCountSearchAll.cpp)
# add_executable(05_03_08_KMPCountSearchAll 05_03_08_KMPCountSearchAll.cpp)
# add_executable(05_03_09_BoyerMooreCountSearchAll 05_03_09_BoyerMooreCountSearchAll.cpp)
# add_executable(05_03_09_BoyerMooreCountSearchAll 05_03_09_BoyerMooreCountSearchAll.cpp)
# add_executable(05_03_10_RabinKarpCountSearchAll 05_03_10_RabinKarpCountSearchAll.cpp)
# add_executable(05_03_12_RabinKarpCheck 05_03_12_RabinKarpCheck.cpp)
# add_executable(05_03_15_BruteForceRL 05_03_15_BruteForceRL.cpp)
# add_executable(05_03_23_RabinKarpPalindrome 05_03_23_RabinKarpPalindrome.cpp)
# add_executable(05_03_24_FindAllOccurrences 05_03_24_FindAllOccurrences.cpp)
# add_executable(05_03_25_Streaming 05_03_25_Streaming.cpp)
# add_executable(05_03_26_CyclicRotationCheck 05_03_26_CyclicRotationCheck.cpp)
# add_executable(05_03_27_TandemRepeatSearch 05_03_27_TandemRepeatSearch.cpp)
# add_executable(05_03_28_BruteForceBufferingSearch 05_03_28_BruteForceBufferingSearch.cpp)
# add_executable(05_03_29_BoyerMooreBufferingSearch 05_03_29_BoyerMooreBufferingSearch.cpp)
# add_executable(05_03_30_TwoDimensionalSearch 05_03_30_TwoDimensionalSearch.cpp)
# add_executable(05_03_32_RabinKarpUniqueSubstrings 05_03_32_RabinKarpUniqueSubstrings.cpp)
